--- a/workflows/pi_correspondence/email_templates/A_initial_email_template.Rmd
+++ b/workflows/pi_correspondence/email_templates/A_initial_email_template.Rmd
@@ -1,7 +1,7 @@
 ### Initial email template
 
 > Hello _____,
-> Thank you for your recent submission to the NSF Arctic Data Center! We will review your data set and get back to you with any suggestions.
+> Thank you for your recent submission to the NSF Arctic Data Center! We will review your data package and get back to you with any suggestions.
 > 
 > From my preliminary examination of your submission I have noticed a few items that I would like to bring to your attention. We are here to help you publish your submission, but your continued assistance is needed to do so. See comments below:
 > 
@@ -72,9 +72,9 @@ Submissions should:
 
 #### Attributes
 
-> I noticed that your data set has incomplete attribute/variable information. Can you please add attribute/variable information to each of your data files by clicking on the "Describe" button located to the right of each of your files at the top of the submission page located here https://beta.arcticdata.io/catalog/#submit/[INSERT EML PID HERE] and then click over to the "Attributes" tab. Please see the guidance below for what attribute/variable information should contain.
+> I noticed that your data package has incomplete attribute/variable information. Can you please add attribute/variable information to each of your data files by clicking on the "Describe" button located to the right of each of your files at the top of the submission page located here https://beta.arcticdata.io/catalog/#submit/[INSERT EML PID HERE] and then click over to the "Attributes" tab. Please see the guidance below for what attribute/variable information should contain.
 
-> For data sets with tabular data (e.g. CSV files), submitted metadata should contain the following components for every attribute (attributes may also be known as variables and in tabular data are arranged in either columns or rows). Note, storage of data in a long versus wide format will allow for much more succinct metadata. Also, please note that tabular data stored within structured formats such as zip, NetCDF, or ESRI spatial files should also comply with these guidelines.
+> For data packages with tabular data (e.g. CSV files), submitted metadata should contain the following components for every attribute (attributes may also be known as variables and in tabular data are arranged in either columns or rows). Note, storage of data in a long versus wide format will allow for much more succinct metadata. Also, please note that tabular data stored within structured formats such as zip, NetCDF, or ESRI spatial files should also comply with these guidelines.
 
 > - A name (often the column or row header in the file). As with file names, only letters, numbers, hyphens (“-“), and underscores (“_”) should be used in attribute names. Always avoid using spaces and specialized ASCII characters when naming attributes.
 > - A complete definition.
