--- a/workflows/edit_data_packages/update_an_object.Rmd
+++ b/workflows/edit_data_packages/update_an_object.Rmd
@@ -12,7 +12,7 @@ The code will look like this (very similar to the `publish_object` function call
 
 ```{r, eval = F}
 id_new <- update_object(adc_test, 
-                        data_pid = "the data pid you need to update",
+                        pid = "the data pid you need to update",
                         path = "path/to/new/file.csv",
                         format_id = "text/csv")
 ```
