--- a/training/04_edit_eml_in_R.Rmd
+++ b/training/04_edit_eml_in_R.Rmd
@@ -1,5 +1,4 @@
-
-# Editing EML in R
+# Edit EML in R
 
 This chapter is a practical tutorial for using R to read, edit, write, and validate EML documents. Much of the information here can also be found in the vignettes for the R packages used in this section (e.g. the [EML package](https://github.com/ropensci/EML/blob/master/vignettes/creating-EML.Rmd)).
 
